--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2{ font-size: 1.5em; }
 .boxed2 {
   border: 1px solid white ;
   position: relative ;
-  top: -150px ;
+  margin-top: 1px ;
 }
 a{
 	text-decoration: none;
